fixed gaps

--- a/src/partials/RecepieCards/RecepieCards.css
+++ b/src/partials/RecepieCards/RecepieCards.css
@@ -1,7 +1,9 @@
 .recepy-container {
   display: flex;
-  gap: 20px;
+  column-gap: 16px;
+  row-gap: 20px;
   flex-wrap: wrap;
+  flex-direction: row;
 }
 .recepy-card-container {
   max-width: 250px;
